--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,7 +16,8 @@ framework:
         resource: '%kernel.project_dir%/app/config/routing.yml'
         strict_requirements: ~
     form: ~
-#    csrf_protection: false
+    csrf_protection:
+        enabled: false
     validation: { enable_annotations: true }
     #serializer: { enable_annotations: true }
     default_locale: '%locale%'
