--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,8 +16,7 @@ framework:
         resource: '%kernel.project_dir%/app/config/routing.yml'
         strict_requirements: ~
     form: ~
-    csrf_protection:
-        enabled: false
+    csrf_protection: ~
     validation: { enable_annotations: true }
     #serializer: { enable_annotations: true }
     default_locale: '%locale%'
